--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "n8n-nodes-<...>",
+  "name": "yaks-n8n-nodes",
   "version": "0.1.0",
   "description": "",
   "keywords": [
@@ -9,11 +9,11 @@
   "homepage": "",
   "author": {
     "name": "",
-    "email": ""
+    "email": "2rileyallen@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/2rileyallen/Yak-s-n8n-nodes.git"
   },
   "engines": {
     "node": ">=20.15"
@@ -32,14 +32,15 @@
   ],
   "n8n": {
     "n8nNodesApiVersion": 1,
-    "credentials": [
-      "dist/credentials/ExampleCredentialsApi.credentials.js",
-      "dist/credentials/HttpBinApi.credentials.js"
-    ],
+    "credentials": [],
     "nodes": [
-      "dist/nodes/ExampleNode/ExampleNode.node.js",
-      "dist/nodes/HttpBin/HttpBin.node.js"
-    ]
+    "dist/nodes/Yak-ChatterboxTTS/ChatterboxTTS.node.js",
+    "dist/nodes/Yak-ComfyUI/ComfyUI.node.js",
+    "dist/nodes/Yak-FFMPEG/FFMPEG.node.js",
+    "dist/nodes/Yak-MuseTalk/MuseTalk.node.js",
+    "dist/nodes/Yak-VocalRemover/VocalRemover.node.js",
+    "dist/nodes/Yak-WhisperSTT/WhisperSTT.node.js"
+  ]
   },
   "devDependencies": {
     "@typescript-eslint/parser": "~8.32.0",
