bat file adjustmenets

--- a/.gitignore
+++ b/.gitignore
@@ -46,8 +46,10 @@ Software/MuseTalk/.gradio/
 Software/MuseTalk/**/__pycache__/
 Software/MuseTalk/*.log
 Software/MuseTalk/*.pyc
+/nodes/Yak-MuseTalk/musetalk_gatekeeper.sqlite
 
 # Ignore the entire ComfyUI application
 /Software/ComfyUI/
 /nodes/Yak-ComfyUI/__pycache__/
 /nodes/Yak-ComfyUI/managed_models/*
+nodes/Yak-ComfyUI/gatekeeper_db.sqlite
