--- a/nodes/Yak-ComfyUI-Server/manifest.json
+++ b/nodes/Yak-ComfyUI-Server/manifest.json
@@ -5,6 +5,18 @@
       "value": "InfiniteTalk",
       "uiFile": "workflows/InfiniteTalk/ui_inputs.json",
       "workflowFile": "workflows/InfiniteTalk/workflow.json"
+    },
+    {
+      "name": "Infinite Talk VibeVoice",
+      "value": "InfiniteTalkVibeVoice",
+      "uiFile": "workflows/InfiniteTalkVibeVoice/ui_inputs.json",
+      "workflowFile": "workflows/InfiniteTalkVibeVoice/workflow.json"
+    },
+    {
+      "name": "Multi Voice VibeVoice",
+      "value": "MultiVoiceVibeVoice",
+      "uiFile": "workflows/MultiVoiceVibeVoice/ui_inputs.json",
+      "workflowFile": "workflows/MultiVoiceVibeVoice/workflow.json"
     }
   ]
 }
